--- a/sam_frontend/home.css
+++ b/sam_frontend/home.css
@@ -7,22 +7,42 @@
 .container {
     display: flex;
     justify-content: center;
-    margin: 3rem auto;
+    min-height: 100vh;
 }
 
 .container main {
     display: flex;
     text-align: center;
-    width: 1200px;
-    border-radius: 15px;
+    justify-content: center;
+    gap: 5rem;
 }
 
 .container main .client .image img {
-    width: 100%;
+    width: 60%;
+    margin-top: 5rem;
 }
 
 .container main .pharmacie .image img {
-    width: 375px;
+    width: 38%;
+    margin-top: 5rem;
+}
+
+.container main .client h1, .pharmacie h1 {
+    margin-top: 2rem;
+}
+
+.container main .client p, .pharmacie p {
+    display: flex;
+    text-align: center;
+    margin-top: 2rem;
+    padding: 0 10% 0 10%;
+}
+
+.container main .client, .pharmacie {
+}
+
+.container main .pharmacie {
+    background-color: rgb(83, 231, 83);
 }
 
 .container main button {
@@ -31,8 +51,23 @@
 }
 
 .container main button{
-    padding: 8px;
+    margin-top: 2rem;
+    padding: 15px;
     border-radius: 5px;
-    background-color: green;
+    background-color: #e67e22;
     color: #ffffff;
+    cursor: pointer;
+}
+
+@media screen and (max-width:950px){
+    .container main {
+        display: grid;
+    }
+
+    .container main .client p, .pharmacie p {
+        padding: 0 5% 0 5%;
+    }
+}
+
+@media screen and (min-width:750px){
 }
