--- a/medico/src/components/sign/sign.css
+++ b/medico/src/components/sign/sign.css
@@ -44,19 +44,29 @@
 .container-sign main .pharmacie {
     background-color: rgb(83, 231, 83);
 }
-
-.button-pharmacie {
-}
-.container-sign main .button-sign {
+.button-client-sign {
     border-radius: 5px;
     margin-top: 2rem;
     padding: 15px 35px;
     border: none;
     border-radius: 5px;
-    background-color: #e67e22;
+    background-color: #6C63FF;
     color: #ffffff;
+    font-weight: bold;
     cursor: pointer;
 }
+.button-pharmacie {
+    border-radius: 5px;
+    margin-top: 2rem;
+    padding: 15px 35px;
+    border: none;
+    border-radius: 5px;
+    background-color: #ffffff;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 @media screen and (max-width:950px){
     .container-sign main {
         display: grid;
