--- a/medico/src/components/dashboard/dashboard.css
+++ b/medico/src/components/dashboard/dashboard.css
@@ -118,3 +118,20 @@
         padding: 30px 15px;
     }
 }
+
+
+
+
+
+
+/* -------------Pharmacie-------------- */
+.medoc-item {
+    display: grid;
+    margin: 10px 0;
+    border: 1px solid rgba(199, 196, 196, 0.479);
+    border-radius: 5px;
+    padding: 15px 10px;
+}
+.medoc-name, .medoc-description, .medoc-price {
+    margin: 5px 0;
+}
