--- a/medico/src/components/home/home.css
+++ b/medico/src/components/home/home.css
@@ -11,6 +11,12 @@
     justify-content: space-between;
     margin: 80px 0;
 }
+#medoc_area {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 10px 0 0 0;
+}
 .client-hp {
     text-decoration: overline;
 }
@@ -52,6 +58,13 @@
     border-radius: 5px;
     color: white;
 }
+.medoc-name,.medoc-description,.medoc-price {
+    margin: 7px 0 0 0;
+}
+.top-medoc-item a {
+    text-decoration: none;
+    margin: 10px 0 0 0;
+}
 .top-medoc {
     margin: 40px 0;
     border: 1px solid rgba(134, 130, 130, 0.425);
@@ -64,7 +77,7 @@
 }
 .top-medoc-content {
     display: flex;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
     gap: 3rem;
 }
 .item-image {
@@ -88,6 +101,10 @@
     padding: 5px 20px;
     border-radius: 4px;
     cursor: pointer;
+}
+.top-medoc-item {
+    display: grid;
+    margin: 10px 0;
 }
 
 @media screen and (max-width: 750px) {
