--- a/medico/src/components/medicament/medicament.css
+++ b/medico/src/components/medicament/medicament.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-.med {
+.med,.medoc {
     display: flex;
     gap: 4rem;
     /* justify-content: center; */
@@ -15,6 +15,14 @@
     margin: 10px 0;
 }
 .med-content button {
+    margin: 20px 0;
+    padding: 10px 25px;
+    border: none;
+    background-color: #6C63FF;
+    border-radius: 5px;
+    color: white;
+}
+.medoc-content button {
     margin: 20px 0;
     padding: 10px 25px;
     border: none;
