--- a/medico/src/components/dashboard/dashboard.css
+++ b/medico/src/components/dashboard/dashboard.css
@@ -5,11 +5,14 @@
     gap: 7rem;
     padding: 50px 50px;
 }
-
-.user-dash-content {
+.btns {
     display: grid;
+}
+.user-dash-content {
+    display: block;
     justify-content: left;
     padding: 35px 30px;
+    height: 100%;
     background-color: rgba(199, 196, 196, 0.479);
     border-radius: 5px;
 }
@@ -18,7 +21,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    margin: 0 0 20px 0;
+    /* margin: 0 0 20px 0; */
 }
 .image-dash img {
     border-radius: 50px;
