--- a/medico/src/components/medicament/medicament.css
+++ b/medico/src/components/medicament/medicament.css
@@ -2,10 +2,24 @@
 .med,.medoc {
     display: flex;
     gap: 4rem;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     padding: 60px 140px;
     font-family: 'Poppins';
+}
+.all-content {
+    display: grid;
+    margin: 35px 30px;
+}
+.all-h1 {
+    display: flex;
+    margin: 0 30px;
+}
+#medoc_area_all {
+    display: grid;
+    margin: 30px 30px;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .med-content {
     display: grid;
@@ -29,4 +43,15 @@
     background-color: #6C63FF;
     border-radius: 5px;
     color: white;
+}
+.see-btn {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    padding: 10px 25px;
+    border: none;
+    background-color: #6C63FF;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
 }
