--- a/medico/src/components/home/home.css
+++ b/medico/src/components/home/home.css
@@ -11,10 +11,16 @@
     justify-content: space-between;
     margin: 80px 0;
 }
+.top-medoc-item img {
+    max-width: 100px;
+}
+.prox-p, .prox-h1 {
+    max-width: 280px;
+}
 #medoc_area {
     display: grid;
     gap: 2rem;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     margin: 10px 0 0 0;
 }
 .client-hp {
@@ -175,5 +181,8 @@
     }
     .prox-image {
         display: none;
+    }
+    #medoc_area {
+        grid-template-columns: 1fr 1fr;
     }
 }
