--- a/medico/src/components/home/home.css
+++ b/medico/src/components/home/home.css
@@ -107,6 +107,7 @@
     color: white;
     padding: 5px 20px;
     border-radius: 4px;
+    max-height: 30px;
     cursor: pointer;
 }
 .top-medoc-item {
